# council

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/: acp_client.py  council.py  council.yaml
work/: .gitignore
