[tool.poetry]
name = "council"
version = "0.1.0"
description = "council project"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.12"

[tool.poetry.group.platform.dependencies]
setuptools = "80.3.1"

[tool.poetry.group.util.dependencies]
tqdm = "4.67.1"
rich = "14.3.3"
tenacity = "8.2.3"
pydantic = "2.12.3"
loky = "3.5.6"
pyparsing = "3.2.3"
psutil = "7.1.3"
typer = "0.21.0"
joblib = "1.5.3"
argh = "0.29.4"

[tool.poetry.group.io.dependencies]
httpx = "0.28.1"

[tool.poetry.group.format.dependencies]
pyarrow = "22.0.0"
pyyaml = "6.0.3"

[tool.poetry.group.mpl.dependencies]
matplotlib = "3.10.8"
aquarel = "0.0.7"
mplcyberpunk = "0.7.6"
seaborn = "0.13.2"

[tool.poetry.group.pandas.dependencies]
pandas = "2.3.2"
pandas-stubs = "2.3.2.250926"

[tool.poetry.group.polars.dependencies]
polars = "1.39.3"

[tool.poetry.group.calculation.dependencies]
numpy = "2.2.6"
scipy = "1.17.1"
scipy-stubs = "1.17.1.2"

[tool.poetry.group.ml.dependencies]
catboost = "1.2.10"
scikit-learn = "1.7.2"
vowpalwabbit = "9.11.2"
xgboost = "3.2.0"
hdbscan = "0.8.41"

[tool.poetry.group.stats.dependencies]
statsmodels = "0.14.6"
datasketches = "5.2.0"

[tool.poetry.group.mcp.dependencies]
mcp = {version="1.26.0", extras=["cli"]}

[tool.poetry.group.acp.dependencies]
agent-client-protocol = "0.9.0"

[tool.poetry.group.dev-lint.dependencies]
flake8 = "7.3.0"
pylint = "4.0.4"

[tool.poetry.group.dev-test.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: the tests takes a long time (deselect with '-m \"not slow\"')",
    "external: the tests required external resource (deselect with '-m \"not external\"')",
]
